# gdnative_template

./: .gitignore  cookiecutter.json
{{cookiecutter.project_name}}/: Simple.gdns  Simple.tscn  project.godot  {{cookiecutter.project_name}}.gdnlib
{{cookiecutter.project_name}}/lib{{cookiecutter.project_name}}/: CMakeLists.txt  conanfile.txt
{{cookiecutter.project_name}}/lib{{cookiecutter.project_name}}/source/: entry.cpp  simple.cpp  simple.h
